Closed
Bug 189853
Opened 22 years ago
Closed 22 years ago
Menubar sometimes eats mouse clicks
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.3final
People
(Reporter: nnbugzilla, Assigned: aaronlev)
References
Details
Attachments
(1 file)
|
542 bytes,
patch
|
yuanyi21
:
review+
bryner
:
superreview+
asa
:
approval1.3b+
|
Details | Diff | Splinter Review |
Now that the fix for bug 179567 is checked in, I've noticed that clicking on the
menubar sometimes does nothing, and it takes a second click to get a menu top
drop down. Unfortunately, I haven't figured out a 100% reliable way to
reproduce this yet, but the following may work:
Steps to reproduce:
1. Click on menubar (for example, on Bookmarks).
2. Bookmarks menu drops down.
3. Click on the browser's title bar to dismiss menu.
4. Bookmarks menu is dismissed correctly.
5. Click on Bookmarks again.
Actual results:
Bookmarks menu does not drop down, and it takes a second click to trigger it.
Expected results:
Bookmarks menu should drop down with the first click.
Build 2003012005, Win98.
| Reporter | ||
Comment 1•22 years ago
|
||
CC'ing aaronl. Hope I'm not overstepping my bounds, but this seems to have
started when bug 179567 was fixed, so I suspect it's a side-effect of that fix.
| Assignee | ||
Comment 2•22 years ago
|
||
See if you can get a 100% reliable testcase.
Assignee: saari → aaronl
| Reporter | ||
Comment 3•22 years ago
|
||
Aaron, it turns out I can reproduce this 100% using the initial steps I gave.
| Assignee | ||
Comment 4•22 years ago
|
||
Are you moving your mouse even a hair between clicks?
Or do 3 quick clicks in the exact same place not pull down the bookmarks menu.
| Assignee | ||
Comment 5•22 years ago
|
||
I still cannot repro this at all.
| Reporter | ||
Comment 6•22 years ago
|
||
Aaron, I am moving the mouse between clicks. The steps I gave pretty much
require the mouse to move: click on Bookmarks menu (not the Personal toolbar,
but the main menubar), move mouse to the window's titlebar and click to dismiss
Bookmarks menu, then move back to Bookmarks in main menubar and click.
Clicking 3 times over the same menubar item seems to work: 1st click drops down
a menu, 2nd click dismisses, and 3rd click drops the menu again.
| Assignee | ||
Comment 7•22 years ago
|
||
Aha, my fault for misreading your steps.
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.3final
| Assignee | ||
Comment 8•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #112329 -
Flags: superreview?(bryner)
Attachment #112329 -
Flags: review?(kyle.yuan)
Attachment #112329 -
Flags: review?(kyle.yuan) → review+
Updated•22 years ago
|
Attachment #112329 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 9•22 years ago
|
||
Comment on attachment 112329 [details] [diff] [review]
Also call ClearRecentlyRolledUp() whenever new menu item is highlighted. That way it won't block the next click.
This is a 1 line patch that just makes sure that clicks don't get accidentally
blocked.
Attachment #112329 -
Flags: approval1.3b?
Comment 10•22 years ago
|
||
Comment on attachment 112329 [details] [diff] [review]
Also call ClearRecentlyRolledUp() whenever new menu item is highlighted. That way it won't block the next click.
a=asa (on behalf of drivers) for checkin to 1.3beta.
Attachment #112329 -
Flags: approval1.3b? → approval1.3b+
| Assignee | ||
Comment 11•22 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 12•22 years ago
|
||
*** Bug 190209 has been marked as a duplicate of this bug. ***
Comment 13•22 years ago
|
||
*** Bug 190998 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 14•22 years ago
|
||
*** Bug 194450 has been marked as a duplicate of this bug. ***
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•