Bug 189853. Click to drop down menu bar item sometimes getting blocked, r=kyle, sr=bryner, a=asa